[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://PixeloidTheme.tres" type="Theme" id=2]
[ext_resource path="res://StartButton.gd" type="Script" id=3]
[ext_resource path="res://OptionsButton.gd" type="Script" id=4]
[ext_resource path="res://QuitButton.gd" type="Script" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="ColorRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -114.0
margin_right = 119.0
margin_bottom = 163.0
focus_neighbour_bottom = NodePath("StartButton")
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="ColorRect/Menu"]
margin_right = 237.0
margin_bottom = 89.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
size_flags_vertical = 3
text = "Start"
script = ExtResource( 3 )

[node name="OptionsButton" type="Button" parent="ColorRect/Menu"]
margin_top = 93.0
margin_right = 237.0
margin_bottom = 183.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
size_flags_vertical = 3
text = "Options"
script = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="ColorRect/Menu"]
margin_top = 187.0
margin_right = 237.0
margin_bottom = 277.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
size_flags_vertical = 3
text = "Quit"
script = ExtResource( 5 )

[connection signal="focus_entered" from="ColorRect/Menu/StartButton" to="ColorRect/Menu/StartButton" method="_on_StartButton_focus_entered"]
[connection signal="focus_exited" from="ColorRect/Menu/StartButton" to="ColorRect/Menu/StartButton" method="_on_StartButton_focus_exited"]
[connection signal="pressed" from="ColorRect/Menu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="ColorRect/Menu/OptionsButton" to="ColorRect/Menu/OptionsButton" method="_on_OptionsButton_focus_entered"]
[connection signal="focus_exited" from="ColorRect/Menu/OptionsButton" to="ColorRect/Menu/OptionsButton" method="_on_OptionsButton_focus_exited"]
[connection signal="pressed" from="ColorRect/Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="ColorRect/Menu/QuitButton" to="ColorRect/Menu/QuitButton" method="_on_QuitButton_focus_entered"]
[connection signal="focus_exited" from="ColorRect/Menu/QuitButton" to="ColorRect/Menu/QuitButton" method="_on_QuitButton_focus_exited"]
[connection signal="pressed" from="ColorRect/Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
